Unify setting JVM opts for TAPI performance tests